--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,7 +1,91 @@
-@import './variables.scss';
+@import "./variables.scss";
 
+:root{
+  --op: 0;
+
+}
 .Projects {
-    background-color: rgb(121, 180, 152);
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+    justify-content: center;
+  background-color: rgb(121, 180, 152);
+  height: 100%;
+  width: 100%;
+
+  .title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 600;
+    width: 100%;
+  }
+  
+    .carousel {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+        height: 60%;
+        width: 100%;
+        gap: 10px;
+       
+.imgContainer{
+  position: relative;
+  width:50%;
+  height: 100%;
+  transition: 1000ms;
+  &:hover {
+    
+    --op: 1;
+    
+  }
+  
+  .preview {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    position: absolute;
+    background-color: rgba($color: #000000, $alpha: .8);
     height: 100%;
     width: 100%;
+    opacity: var(--op);
+    top: 0;
+    z-index: 99;
+    transition: 1000ms;
+    
+    .gitlink {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+    a{
+     
+      padding: 12px;
+      font-size: 2rem;
+      text-decoration: none;
+      color:white;
+    }
+  }
 }
+      .buttonContainer{
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        height: 2rem;
+      }
+        button {
+          border-radius: 100vw;
+          height: 40px;
+          min-width: 100%;
+        }
+    }
+
+
+
+
+}
+
