projects page added

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -46,6 +46,7 @@
       animation: slideIn 3s;
       animation-delay: 3s;
       animation-fill-mode: forwards;
+      background-color: $c1;
    }
    .hide {
       display: inline-block !important;
