--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -3,9 +3,9 @@
 .Contact {
     padding: 0;
     margin: 0;
-    background-color: $c2;
+    background-color: $c1;
     overflow: hidden;
-    
+  
     position: absolute;
     top: 0;
     left: 0;
@@ -20,7 +20,7 @@
     align-items: center;
     gap: 1rem;
 
-    color: black;
+    color: white;
     font-size: 1.3rem;
    }
     
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+   
 
   .staggerBox1 {
     height: 10% !important;
@@ -44,9 +45,9 @@
     overflow: hidden;
     align-items: center;
     height: 50%;
-    
+    letter-spacing: .3ch;
    
-    color: black;
+    color: white;
     font-size: 2rem;
    }
 }
