--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -4,6 +4,23 @@
   --op: 0;
 
 }
+.Projects::before{
+   content: "";
+    position: absolute;
+    width : 100%;
+    height: 100%;
+    background: inherit;
+    z-index: -1;
+    
+  filter: brightness(10%) blur(10px);
+    -moz-filter   : blur(10px);
+    -webkit-filter: blur(10px);
+    -o-filter     : blur(10px);
+    
+    
+}
+
+
 .Projects {
     display: flex;
     flex-direction: column;
@@ -14,14 +31,18 @@
   height: 100%;
   width: 100%;
 
-  .title{
+    .title{
+      background-color: rgba($color: #000000, $alpha: .5);
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 600;
-    width: 100%;
+    width: 30%;
+    border-radius: 25px;
+    padding: 1rem;
+    color: white;
   }
   
     .carousel {
@@ -38,6 +59,9 @@
   width:50%;
   height: 100%;
   transition: 1000ms;
+  border: 5px solid white;
+  outline: 5px solid black;
+ 
   &:hover {
     
     --op: 1;
@@ -79,8 +103,12 @@
       }
         button {
           border-radius: 100vw;
-          height: 40px;
+          height: 70px;
           min-width: 100%;
+          color: white;
+          font-size: 2rem;
+          padding: 1rem;
+          background-color: rgba($color: #000000, $alpha: .8);
         }
     }
 
