--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,38 +1,34 @@
 @import "./variables.scss";
 
-:root{
+:root {
   --op: 0;
-
 }
-.Projects::before{
-   content: "";
-    position: absolute;
-    width : 100%;
-    height: 100%;
-    background: inherit;
-    z-index: -1;
-    
+.Projects::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  z-index: -1;
+
   filter: brightness(10%) blur(10px);
-    -moz-filter   : blur(10px);
-    -webkit-filter: blur(10px);
-    -o-filter     : blur(10px);
-    
-    
+  -moz-filter: blur(10px);
+  -webkit-filter: blur(10px);
+  -o-filter: blur(10px);
 }
-
 
 .Projects {
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
   background-color: rgb(121, 180, 152);
   height: 100%;
   width: 100%;
 
-    .title{
-      background-color: rgba($color: #000000, $alpha: .5);
+  .title {
+    background-color: rgba($color: #000000, $alpha: 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -44,76 +40,68 @@
     padding: 1rem;
     color: white;
   }
-  
-    .carousel {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-        height: 60%;
-        width: 100%;
-        gap: 10px;
-       
-.imgContainer{
-  position: relative;
-  width:50%;
-  height: 100%;
-  transition: 1000ms;
-  border: 5px solid white;
-  outline: 5px solid black;
- 
-  &:hover {
-    
-    --op: 1;
-    
-  }
-  
-  .preview {
+
+  .carousel {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    position: absolute;
-    background-color: rgba($color: #000000, $alpha: .8);
-    height: 100%;
+    justify-content: center;
+    height: 60%;
     width: 100%;
-    opacity: var(--op);
-    top: 0;
-    z-index: 99;
-    transition: 1000ms;
-    
-    .gitlink {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
+    gap: 10px;
+
+    .imgContainer {
+      position: relative;
+      width: 50%;
+      height: 100%;
+      transition: 1000ms;
+      border: 5px solid white;
+      outline: 5px solid black;
+
+      &:hover {
+        --op: 1;
+      }
+
+      .preview {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        position: absolute;
+        background-color: rgba($color: #000000, $alpha: 0.8);
+        height: 100%;
+        width: 100%;
+        opacity: var(--op);
+        top: 0;
+        z-index: 99;
+        transition: 1000ms;
+
+        .gitlink {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+        }
+        a {
+          padding: 12px;
+          font-size: 2rem;
+          text-decoration: none;
+          color: white;
+        }
+      }
     }
-    a{
-     
-      padding: 12px;
+    .buttonContainer {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      height: 2rem;
+    }
+    button {
+      border-radius: 100vw;
+      height: 70px;
+      min-width: 100%;
+      color: white;
       font-size: 2rem;
-      text-decoration: none;
-      color:white;
+      padding: 1rem;
+      background-color: rgba($color: #000000, $alpha: 0.8);
     }
   }
 }
-      .buttonContainer{
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-        height: 2rem;
-      }
-        button {
-          border-radius: 100vw;
-          height: 70px;
-          min-width: 100%;
-          color: white;
-          font-size: 2rem;
-          padding: 1rem;
-          background-color: rgba($color: #000000, $alpha: .8);
-        }
-    }
-
-
-
-
-}
-
